# simpleARKANOID

./: .clang-format  .gitignore  CMakeLists.txt  LICENCE.md  README.md  README_2.md  REFACTORING  TODO
Unit_tests/: IntervalTimerTest.cpp
assets/Levels/: Level_1.txt
assets/levels/: Level_1.txt  Level_10.txt  Level_2.txt  Level_3.txt  Level_4.txt  Level_5.txt  Level_6.txt  Level_7.txt  Level_8.txt  Level_9.txt  Level_pattern.txt  level_layout_helper.ods
headers/: AudioMixer.hpp  Ball.hpp  Block.hpp  Colors.hpp  Controller.hpp  Enums.hpp  Game.hpp  IntervalTimer.hpp  LevelData.hpp  LimitTimer.hpp  LoadedSDLsufrace.hpp  MovableObject.hpp  Paddle.hpp  Paths.hpp  RandNum.hpp  Renderer.hpp  SDLInitializers.hpp  SDLexception.hpp  SideWall.hpp  Sprite.hpp  StaticObject.hpp  TextElement.hpp  Texture.hpp  Vector2d.hpp  gMath.hpp
src/: AudioMixer.cpp  Ball.cpp  Block.cpp  Controller.cpp  Game.cpp  IntervalTimer.cpp  LevelData.cpp  LimitTimer.cpp  LimitTimer.hpp  LoadedSDLsurface.cpp  MovableObject.cpp  Paddle.cpp  RandNum.cpp  Renderer.cpp  SDLInitializers.cpp  SDLexception.cpp  SDLexception.hpp  SideWall.cpp  StaticObject.cpp  TextElement.cpp  Texture.cpp  Vector2d.cpp  controller.cpp  gMath.cpp  game.cpp  game.hpp  main.cpp  renderer.cpp  renderer.hpp  timer.cpp  timer.hpp
tests/: RandTests.cpp  VectorDistanceTest.cpp  VectorTests.cpp
